# Spidey

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  icons.toml  meson.build  meson_options.txt
.github/workflows/: ci.yml
build-aux/: com.github.kdwk.Spidey.Devel.json  com.github.kdwk.Spidey.Devel.json~  com.github.kdwk.Spidey.json
data/: com.github.kdwk.Spidey.desktop.in.in  com.github.kdwk.Spidey.gschema.xml.in  com.github.kdwk.Spidey.metainfo.xml.in.in
data/resources/: resources.gresource.xml  style-dark.css  style.css
po/: POTFILES.in
src/: app.rs  document.rs  file.rs  lib.rs  main.rs  recipe.rs  setup.rs  smallwebwindow.rs  webwindow.rs  webwindowcontrolbar.rs  whoops.rs
src/modals/: about.rs
