[package]
name = "spidey"
version = "0.1.0"
authors = ["Kdwk <kdwkleung@proton.me>"]
edition = "2021"
publish = false

[profile.release]
lto = true

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
tracing = "0.1"
tracing-subscriber = "0.3"
webkit6 = "0.4.0"
webkit6-sys = "0.4.0"
url = "2.5.0"
relm4 = { version = "0.9.0", features = ["libadwaita", "gnome_46", "macros"] }
relm4-components = "0.9.1"
relm4-macros = "0.9.0"
relm4-icons = "0.9.0"
directories = "5.0.1"
chrono = { version = "0.4.38", features = ["clock"] }
tokio = { version = "1.37.0", features = ["time"] }
reqwest = { version = "0.12.8", features = ["blocking"] }
ashpd = "0.9.1"
open = "5.1.2"
extend = "1.2.0"
tracker = "0.2.1"
documents = "0.1.1"
